[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mucrucible"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "muforge",
    "muplugins"
]
# This creates the `muforge` command on install
#scripts = { muforge = "muforge" }

[tool.setuptools]
packages = ["mucrucible"]
